# ResourceCenter

./: .gitignore  Cargo.toml  README.md  \  deploy.sh  flake.nix
.github/workflows/: static.yml
documentation/: Lib.md  Misc.md  Overview.md  Project_Structure.md  Schema.md  Sqlite.md  Web.md
src/: lib.rs  sqlite.rs  utils.rs
web/: about.html  format.css  index.html  style.css
web/database/: !TEMP!_Schema.md  create.sql  create_from_csv.sh  database.db  temp.sql
web/database/finished_csv's/: .~lock.Contacts.csv#  .~lock.Keywords.csv#  .~lock.Locations.csv#  .~lock.Orgs.csv#  Contacts.csv  Cost.csv  Keywords.csv  Locations.csv  Log.csv  Orgs.csv  Services.csv
web/database/temp_downloaded_airtable_csv's/: .~lock.Services-All Services.csv#  .~lock.keywords.csv#  Contacts-All Contacts.csv  Documents-All Documents.csv  External Finders-All Finders.csv  Favorites-All Favorites.csv  Form Submissions-All Submissions.csv  LatLong.csv  Locations-All Locations.csv  Log.csv  Notes & Alerts-All Notes & Alerts.csv  OrgContacts.csv  Orgs-All Orgs.csv  Service Groups-All Service Groups.csv  Service Types-All Service Types.csv  Services-All Services.csv  Tags-All Tags.csv  Users-All Users.csv
web/style/: styles.css
web/ui/: dropdown.js  styles.css  sun-and-moon.css  theme-toggle.css  theme-toggle.js  ui.js  ui_options.json
web/wasm/: ResourceCenter.d.ts  ResourceCenter.js  ResourceCenter_bg.wasm  ResourceCenter_bg.wasm.d.ts  vanzwol_gustafson.d.ts  vanzwol_gustafson.js  vanzwol_gustafson_bg.wasm  vanzwol_gustafson_bg.wasm.d.ts
(+1 files in other folders)
