[package]
name = "vanzwol-gustafson"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.74"
wasm-bindgen-futures = "0.4.50"
sqlite-wasm-rs = { version = "0.3", default-features = false, features = ["precompiled"] }
web-sys = { version = "0.3.77", features = ["Response", "Document", "Window", "HtmlElement", "console"] }
js-sys = "0.3.77"
markdown-to-html = "0.1.3"